# OffloadedDNN

./: README.md  Report_Anton_Melnychuk.md
rust_movenet_client/: Cargo.toml
rust_movenet_client/src/: app.rs  buffer.rs  camera.rs  ioctl_macros.rs  main.rs  server_facing.rs
rust_movenet_server/: Cargo.toml
rust_movenet_server/src/: main.rs  utils.rs
