[package]
name = "rust_movenet_client"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.29.0", features = ["ioctl", "mman"] }
serde = { version = "1.0.210", features = ["derive"] }
v4l2-sys-mit = "0.3.0"
tflitec = "0.6.0"
bincode = "1.3.3"
opencv = "0.80.0"
libc = "0.2.161"
sdl2 = "0.37.0"
